--- a/Debug/makefile
+++ b/Debug/makefile
@@ -38,19 +38,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: High\ Goal\ Vision
+all: High-Goal-Vision
 
 # Tool invocations
-High\ Goal\ Vision: $(OBJS) $(USER_OBJS)
+High-Goal-Vision: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -L/usr/local/zed/lib -o "High Goal Vision" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -L/usr/local/zed/lib -o "High-Goal-Vision" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) "High Goal Vision"
+	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) High-Goal-Vision
 	-@echo ' '
 
 .PHONY: all clean dependents
